2012-12-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/gfxterm.c (grub_virtual_screen_setup): Get font as
	argument rather than font name. All users updated.
	(grub_gfxterm_set_window): Likewise.

2012-12-10  Vladimir Testov  <vladimir.testov@rosalab.ru>

	* util/grub-mkfont.c (argp_parser): Fix a typo which prevented --asce
	from working.

2012-12-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/getroot.c (convert_system_partition_to_system_disk): Support
	nbd disks.

2012-12-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ufs.c (grub_ufs_dir): Stop if direntlen is 0 to avoid
	infinite loop on corrupted FS.

2012-12-08  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix big-endian mtime.

	* grub-core/fs/ufs.c (grub_ufs_inode): Split improperly attached
	together sec and usec.
	(grub_ufs_dir): Use correct byteswapping for UFS time.

2012-12-08  Vladimir Serbinenko  <phcoder@gmail.com>

	Support big-endian UFS1.

	* Makefile.util.def (libgrubmods): Add ufs_be.c
	* grub-core/Makefile.core.def (ufs1_be): New module.
	* grub-core/fs/ufs_be.c: New file.
	* grub-core/fs/ufs.c: Declare grub_ufs_to_le* and use them throughout
	the file.

2012-11-28  Leif Lindholm  <leif.lindholm@arm.com>

        * include/grub/types.h: Fix functionality unaffecting typo in
        GRUB_TARGET_WORDSIZE conditional macro.

2012-11-28  Paulo Flabiano Smorigo  <pfsmorigo@br.ibm.com>

	* grub-core/net/bootp.c (parse_dhcp_vendor): Fix double increment.

2012-10-28  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* util/grub.d/10_netbsd.in: Fix tab indentation and make sure
	that /netbsd appears first (when it exists).

2012-10-12  Christoph Junghans  <ottxor@gentoo.org>

	* grub-core/Makefile.am (moddep.lst): Use $(AWK) rather than awk.
	Fixes Savannah bug #37558.

2012-10-12  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/commands/configfile.c (GRUB_MOD_INIT): Correct
	description of extract_entries_configfile.

2012-10-05  Colin Watson  <cjwatson@ubuntu.com>
