@@ -1,3 +1,8 @@
+2012-12-10  Dr. Tilmann Bubeck <t.bubeck@reinform.de>
+
+	* grub-core/gfxmenu/view.c (init_terminal): Avoid making terminal
+	window too small.
+
 2012-12-10  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* grub-core/term/gfxterm.c (grub_virtual_screen_setup): Get font as
